fix(UI): Fix close button for settings overlay on mobile

--- a/app/src/ui/screens/SettingsScreen/SettingsScreen.css
+++ b/app/src/ui/screens/SettingsScreen/SettingsScreen.css
@@ -49,6 +49,7 @@
 
 .settings-dialog-close-btn {
     @apply absolute top-3 right-2 size-10;
+    z-index: 11000;
 }
 
 .settings-screen {
